--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
         <title>My Favorite Food</title>
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <div class="l_wrapper">
-            <header class="food-header"></header>
-            <main class="food-main"></main>
-            <footer class="food-footer"></footer>
-        </div>
+        <header class="food-header">
+            <div class="header_wrapper">
+                <h1>My Favorite Food</h1>
+                <img src="./images/icon.png" />
+            </div>
+        </header>
+        <main class="food-main">
+            <div class="main_wrapper">main</div>
+        </main>
+        <footer class="food-footer">
+            <div class="footer_wrapper">footer</div>
+        </footer>
     </body>
 </html>
