전체 레이어 잡는 마크업 다시  작성

--- a/index.html
+++ b/index.html
@@ -6,16 +6,30 @@
     </head>
     <body>
         <header class="food-header">
-            <div class="header_wrapper">
-                <h1>My Favorite Food</h1>
-                <img src="./images/icon.png" />
+            <div class="l_wrapper">
+                <div class="header">
+                    <h1 class="header_title">My Favorite Food</h1>
+                    <img class="header_img" src="./images/icon.png" />
+                </div>
             </div>
         </header>
         <main class="food-main">
-            <div class="main_wrapper">main</div>
+            <div class="l_wrapper">
+                <ul>
+                    <li>
+                        <section class="contents">1</section>
+                    </li>
+                    <li>
+                        <section class="contents">2</section>
+                    </li>
+                    <li>
+                        <section class="contents">3</section>
+                    </li>
+                </ul>
+            </div>
         </main>
         <footer class="food-footer">
-            <div class="footer_wrapper">footer</div>
+            <div class="l_wrapper"></div>
         </footer>
     </body>
 </html>
