main 부분 기본 레이아웃 잡음

--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
         </header>
         <main class="food-main">
             <div class="l_wrapper">
-                <ul>
-                    <li>
-                        <section class="contents">1</section>
-                    </li>
-                    <li>
-                        <section class="contents">2</section>
-                    </li>
-                    <li>
-                        <section class="contents">3</section>
-                    </li>
-                </ul>
+                <div class="contents">
+                    <ul class="l_row">
+                        <li class="l_col l_col_4_12">
+                            <section class="card">
+                                <div class="card_header">
+                                    <img src="" />
+                                    <h2></h2>
+                                </div>
+                                <div class="card_contents"></div>
+                                <div class="card_tag"></div>
+                            </section>
+                        </li>
+                        <li class="l_col l_col_4_12">
+                            <section class="card">1</section>
+                        </li>
+                        <li class="l_col l_col_4_12">
+                            <section class="card">1</section>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </main>
         <footer class="food-footer">
