card_contents 부분 내용 안 넘치게 만듬

--- a/index.html
+++ b/index.html
@@ -18,20 +18,73 @@
                 <div class="contents">
                     <ul class="l_row">
                         <li class="l_col l_col_4_12">
-                            <section class="card">
+                            <section class="card hotdog">
                                 <div class="card_header">
-                                    <img src="" />
-                                    <h2></h2>
+                                    <!-- <img src="./images/pic01.png" /> -->
+                                    <h2>Chilli Hotdog</h2>
                                 </div>
-                                <div class="card_contents"></div>
-                                <div class="card_tag"></div>
+                                <div class="card_contents">
+                                    <p>
+                                        <strong>Plain food</strong> dolor sit
+                                        amet, consectetuer adipiscing elit.
+                                        Aenean commodo ligula eget dolor. Aenean
+                                        massa. Cum sociis natoque penatibus et
+                                        magnis dis parturient montes, nascetur
+                                        ridiculus mus. Donec quam felis
+                                        줄바꿈실험용문구
+                                        adasdadadsadsadsasadsasasd
+                                    </p>
+                                </div>
+                                <div class="card_tag">
+                                    <span># 맛있습니다</span>
+                                    <span># 와~놀랍네요!</span>
+                                    <span># 굳굳</span>
+                                </div>
                             </section>
                         </li>
                         <li class="l_col l_col_4_12">
-                            <section class="card">1</section>
+                            <section class="card burger">
+                                <div class="card_header">
+                                    <h2>Shake Shake Burger</h2>
+                                </div>
+                                <div class="card_contents">
+                                    <p>
+                                        <strong>Plain food</strong> dolor sit
+                                        amet, consectetuer adipiscing elit.
+                                        Aenean commodo ligula eget dolor. Aenean
+                                        massa. Cum sociis natoque penatibus et
+                                        magnis dis parturient montes, nascetur
+                                        ridiculus mus. Donec quam felis
+                                    </p>
+                                </div>
+                                <div class="card_tag">
+                                    <span># 맛있습니다</span>
+                                    <span># 와~놀랍네요!</span>
+                                    <span># 굳굳</span>
+                                </div>
+                            </section>
                         </li>
                         <li class="l_col l_col_4_12">
-                            <section class="card">1</section>
+                            <section class="card pizza">
+                                <div class="card_header">
+                                    <h2>Chilli Hotdog</h2>
+                                </div>
+                                <div class="card_contents">
+                                    <p>
+                                        <strong>Plain food</strong> dolor sit
+                                        amet, consectetuer adipiscing elit.
+                                        Aenean commodo ligula eget dolor. Aenean
+                                        massa. Cum sociis natoque penatibus et
+                                        magnis dis parturient montes, nascetur
+                                        ridiculus mus. Donec quam felis
+                                    </p>
+                                </div>
+                                <div class="card_tag">
+                                    <span># 맛있습니다</span>
+                                    <span># 와~놀랍네요!</span>
+                                    <span># 굳굳</span>
+                                </div>
+                            </section>
                         </li>
                     </ul>
                 </div>
