footer 완성 및 card_tag 부분 짤리는 문제 해결

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                                     </p>
                                 </div>
                                 <div class="card_tag">
-                                    <span># 맛있습니다</span>
-                                    <span># 와~놀랍네요!</span>
-                                    <span># 굳굳</span>
+                                    <span># 빵이 부드러워요</span>
+                                    <span># 패티 두꺼비</span>
+                                    <span># 맛집</span>
                                 </div>
                             </section>
                         </li>
@@ -80,9 +80,8 @@
                                     </p>
                                 </div>
                                 <div class="card_tag">
-                                    <span># 맛있습니다</span>
-                                    <span># 와~놀랍네요!</span>
-                                    <span># 굳굳</span>
+                                    <span># 라지한판</span>
+                                    <span># 치즈가 쭈~욱</span>
                                 </div>
                             </section>
                         </li>
@@ -91,7 +90,9 @@
             </div>
         </main>
         <footer class="food-footer">
-            <div class="l_wrapper"></div>
+            <div class="l_wrapper">
+                <div class="footer">© VEAMCAMP 2023</div>
+            </div>
         </footer>
     </body>
 </html>
