--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Favorite Food</title>
         <link rel="stylesheet" href="./style.css" />
     </head>
@@ -17,7 +20,7 @@
             <div class="l_wrapper">
                 <div class="contents">
                     <ul class="l_row">
-                        <li class="l_col l_col_4_12">
+                        <li class="l_col l_col_4_12 l_col_tablet_6_12">
                             <section class="card hotdog">
                                 <div class="card_header">
                                     <!-- <img src="./images/pic01.png" /> -->
@@ -42,7 +45,7 @@
                                 </div>
                             </section>
                         </li>
-                        <li class="l_col l_col_4_12">
+                        <li class="l_col l_col_4_12 l_col_tablet_6_12">
                             <section class="card burger">
                                 <div class="card_header">
                                     <h2>Shake Shake Burger</h2>
@@ -64,7 +67,7 @@
                                 </div>
                             </section>
                         </li>
-                        <li class="l_col l_col_4_12">
+                        <li class="l_col l_col_4_12 l_col_tablet_6_12">
                             <section class="card pizza">
                                 <div class="card_header">
                                     <h2>Chilli Hotdog</h2>
